# Withsql

./:  README.md   .gitignore  Dockerfile  README.md  cert.pem  dfsad  docker-compose.yaml  docker-compose.yml  key.pem  manage.py  pyproject.toml  requirements.txt  requirements.txt~  tmp
.github/workflows/: docker-image.yml
sales/: models.py  serializers.py  urls.py  views.py
sales/migrations/: 0001_initial.py  0002_alter_sales_productname.py  0003_alter_products_product_alter_sales_productname.py
stunnel/: stunnel.cert  stunnel.key  stunnel.pem
withsql/: .env  asgi.py  settings.py  urls.py  wsgi.py
