[tool.poetry]
name = "withsql"
version = "1"
description = ""
authors = ["Vanchez98 <iom.boghean@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mysqlclient = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
